--- a/src/main/resources/templates/boletim.html
+++ b/src/main/resources/templates/boletim.html
@@ -1,26 +1,39 @@
-<table class="table table-bordered">
-    <thead>
-    <tr>
-        <th>Disciplina</th>
-        <th>Professor</th>
-        <th>Nota</th>
-        <th>Faltas</th>
-        <th>Situação</th>
-        <th>Ações</th> </tr>
-    </thead>
-    <tbody>
-    <tr th:each="mat : ${matriculas}">
-        <td th:text="${mat.disciplina.nome}">Matemática</td>
-        <td th:text="${mat.disciplina.professor}">Prof X</td>
-        <td th:text="${mat.nota}">10.0</td>
-        <td th:text="${mat.faltas}">0</td>
-        <td>
-        </td>
-        <td>
-            <a th:href="@{/sistema/matricula/{id}/editar(id=${mat.id})}" class="btn btn-warning btn-sm">
-                Editar
-            </a>
-        </td>
-    </tr>
-    </tbody>
-</table>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>...</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link th:href="@{/css/main.css}" rel="stylesheet">
+</head>
+<body>
+    <div th:replace="~{fragments/sidebar :: sidebar}"></div>
+    <div class="content">
+        <table class="table table-bordered" xmlns:th="http://www.w3.org/1999/xhtml">
+            <thead>
+            <tr>
+                <th>Disciplina</th>
+                <th>Professor</th>
+                <th>Nota</th>
+                <th>Faltas</th>
+                <th>Situação</th>
+                <th>Ações</th> </tr>
+            </thead>
+            <tbody>
+            <tr th:each="mat : ${matriculas}">
+                <td th:text="${mat.disciplina.nome}">Matemática</td>
+                <td th:text="${mat.disciplina.professor}">Prof X</td>
+                <td th:text="${mat.nota}">10.0</td>
+                <td th:text="${mat.faltas}">0</td>
+                <td>
+                </td>
+                <td>
+                    <a th:href="@{/sistema/matricula/{id}/editar(id=${mat.id})}" class="btn btn-warning btn-sm">
+                        Editar
+                    </a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</body>
+</html>
