--- a/src/main/resources/templates/nova_disciplina.html
+++ b/src/main/resources/templates/nova_disciplina.html
@@ -3,33 +3,36 @@
 <head>
     <title>Nova Disciplina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link th:href="@{/css/main.css}" rel="stylesheet">
 </head>
-<body class="container mt-5">
+<body>
+    <div th:replace="~{fragments/sidebar :: sidebar}"></div>
+    <div class="content">
+        <h2>Cadastrar Nova Disciplina</h2>
+        <hr>
 
-<h2>Cadastrar Nova Disciplina</h2>
-<hr>
+        <form th:action="@{/sistema/disciplinas/nova}" th:object="${disciplina}" method="POST">
 
-<form th:action="@{/sistema/disciplinas/nova}" th:object="${disciplina}" method="POST">
+            <div class="mb-3">
+                <label for="nome" class="form-label">Nome da Disciplina:</label>
+                <input type="text" class="form-control" id="nome" th:field="*{nome}" required>
+            </div>
 
-    <div class="mb-3">
-        <label for="nome" class="form-label">Nome da Disciplina:</label>
-        <input type="text" class="form-control" id="nome" th:field="*{nome}" required>
+            <div class="mb-3">
+                <label for="professor" class="form-label">Professor:</label>
+                <input type="text" class="form-control" id="professor" th:field="*{professor}" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="semestre" class="form-label">Semestre:</label>
+                <input type="number" class="form-control" id="semestre" th:field="*{semestre}" required>
+            </div>
+
+            <button type="submit" class="btn btn-success">Salvar</button>
+            <a href="/sistema/disciplinas" class="btn btn-secondary">Cancelar</a>
+
+        </form>
     </div>
-
-    <div class="mb-3">
-        <label for="professor" class="form-label">Professor:</label>
-        <input type="text" class="form-control" id="professor" th:field="*{professor}" required>
-    </div>
-
-    <div class="mb-3">
-        <label for="semestre" class="form-label">Semestre:</label>
-        <input type="number" class="form-control" id="semestre" th:field="*{semestre}" required>
-    </div>
-
-    <button type="submit" class="btn btn-success">Salvar</button>
-    <a href="/sistema/disciplinas" class="btn btn-secondary">Cancelar</a>
-
-</form>
-
 </body>
 </html>
