--- a/src/main/resources/templates/novo_aluno.html
+++ b/src/main/resources/templates/novo_aluno.html
@@ -3,28 +3,30 @@
 <head>
     <title>Novo Aluno</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link th:href="@{/css/main.css}" rel="stylesheet">
 </head>
-<body class="container mt-5">
+<body>
+    <div th:replace="~{fragments/sidebar :: sidebar}"></div>
+    <div class="content">
+        <h2>Cadastrar Novo Aluno</h2>
+        <hr>
 
-<h2>Cadastrar Novo Aluno</h2>
-<hr>
+        <form th:action="@{/sistema/alunos/novo}" th:object="${aluno}" method="POST">
 
-<form th:action="@{/sistema/alunos/novo}" th:object="${aluno}" method="POST">
+            <div class="mb-3">
+                <label for="nome" class="form-label">Nome:</label>
+                <input type="text" class="form-control" id="nome" th:field="*{nome}" required>
+            </div>
 
-    <div class="mb-3">
-        <label for="nome" class="form-label">Nome:</label>
-        <input type="text" class="form-control" id="nome" th:field="*{nome}" required>
+            <div class="mb-3">
+                <label for="ra" class="form-label">RA (Registro Acadêmico):</label>
+                <input type="text" class="form-control" id="ra" th:field="*{ra}" required>
+            </div>
+
+            <button type="submit" class="btn btn-success">Salvar</button>
+            <a href="/sistema/alunos" class="btn btn-secondary">Cancelar</a>
+        </form>
     </div>
-
-    <div class="mb-3">
-        <label for="ra" class="form-label">RA (Registro Acadêmico):</label>
-        <input type="text" class="form-control" id="ra" th:field="*{ra}" required>
-    </div>
-
-    <button type="submit" class="btn btn-success">Salvar</button>
-    <a href="/sistema/alunos" class="btn btn-secondary">Cancelar</a>
-
-</form>
-
 </body>
 </html>
