--- a/bin/src/main/resources/templates/boletim.html
+++ b/bin/src/main/resources/templates/boletim.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Boletim</title>
+    <title>...</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link th:href="@{/css/main.css}" rel="stylesheet">
@@ -8,13 +8,6 @@
 <body>
     <div th:replace="~{fragments/sidebar :: sidebar}"></div>
     <div class="content">
-		<h2>Boletim do Aluno: <span th:text="${aluno.nome}">Nome</span></h2>
-        <p>RA: <span th:text="${aluno.ra}">000</span></p>
-        <hr>
-        
-        <a th:href="@{/sistema/aluno/{id}/matricular(id=${aluno.id})}" class="btn btn-success mb-3">
-            + Matricular em Nova Disciplina
-        </a>
         <table class="table table-bordered" xmlns:th="http://www.w3.org/1999/xhtml">
             <thead>
             <tr>
@@ -32,9 +25,7 @@
                 <td th:text="${mat.nota}">10.0</td>
                 <td th:text="${mat.faltas}">0</td>
                 <td>
-			        <span th:if="${mat.nota >= 6}" class="badge bg-success">Aprovado</span>
-			        <span th:unless="${mat.nota >= 6}" class="badge bg-danger">Reprovado</span>
-    			</td>
+                </td>
                 <td>
                     <a th:href="@{/sistema/matricula/{id}/editar(id=${mat.id})}" class="btn btn-warning btn-sm">
                         Editar
